--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -125,32 +125,39 @@
                           alt="User Pic"
                         />
                       </div>
-                      <div style="
+                      <div
+                        style="
                       font-size: 20px;
                       margin-left: auto;
                       margin-right: auto; 
                       
                       "
-                      class="col-md-6 col-sm-height">
-                        <strong ><p style="text-align: center">User information:</p></strong><br /><br />
-                        <table style="margin-left:20px; "
+                        class="col-md-6 col-sm-height"
+                      >
+                        <strong
+                          ><p style="text-align: center">
+                            User information:
+                          </p></strong
+                        ><br /><br />
+                        <table
+                          style="margin-left:20px; "
                           class="table table-condensed table-responsive table-user-information"
                         >
-                          <tbody >
+                          <tbody>
                             <tr>
-                              <td>username:</td>
+                              <td>Username:</td>
                               <td>%username%</td>
                             </tr>
                             <tr>
-                              <td>first name:</td>
+                              <td>First name:</td>
                               <td>%name%</td>
                             </tr>
                             <tr>
-                              <td>last name:</td>
+                              <td>Last name:</td>
                               <td>%surname%</td>
                             </tr>
                             <tr>
-                              <td>email:</td>
+                              <td>E mail:</td>
                               <td>%email%</td>
                             </tr>
                             <tr>
