--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -18,7 +18,9 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+
     />
+    <title>Login</title>
   </head>
 
   <body class="h-100 w-100">
@@ -70,13 +72,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://github.com/team-pcto-MA/PROGETTO_MA">About</a></li>
             </ul>
             <div class="row">
               <div
                 class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"
               >
-                <a href="#">
+                <a href="https://github.com/team-pcto-MA/PROGETTO_MA">
                   <i class="fa fa-github fa-2x"></i>
                 </a>
               </div>
