--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='./css/style.css') }}"
     />
+    <title>register</title>
   </head>
   <!->
   <body>
@@ -146,15 +147,15 @@
                 <a class="nav-link active" href="/view/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="https://github.com/team-pcto-MA/PROGETTO_MA">Features</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://github.com/team-pcto-MA/PROGETTO_MA">About</a></li>
             </ul>
             <div class="row">
               <div
                 class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"
               >
-                <a href="#">
+                <a href="https://github.com/team-pcto-MA/PROGETTO_MA">
                   <i class="fa fa-github fa-2x"></i>
                 </a>
               </div>
