--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -75,7 +75,7 @@
               <div class="form-group">
                 <label for="form18" class="text-info">Your phone number</label>
                 <input
-                  type="text"
+                  type="tel"
                   name="phone"
                   class="form-control"
                   id="form18"
