--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -59,7 +59,9 @@
             <a href="/view/login" class="btn btn-lg btn-primary mx-1"
               >SIGN UP</a
             >
-            <a class="btn btn-lg mx-1 btn-outline-primary" href="https://github.com/team-pcto-MA/PROGETTO_MA"
+            <a
+              class="btn btn-lg mx-1 btn-outline-primary"
+              href="https://github.com/team-pcto-MA/PROGETTO_MA"
               >LEARN MORE!</a
             >
           </div>
@@ -70,19 +72,26 @@
       <div class="container-fluid">
         <div class="row">
           <div
-            class="px-md-5 p-3 d-flex flex-column justify-content-center text-center col-lg-6 bg-dark"
+            class="
+              px-md-5
+              p-3
+              d-flex
+              flex-column
+              justify-content-center
+              text-center
+              col-lg-6
+              bg-dark
+            "
           >
             <h1 class="text-primary">MULTI SENSOR ALARM</h1>
             <p class="mb-3 lead text-info">
-              Be Careful! <br>
-              Your security is at risk without the proper systems. <br>
-              In 2018 there was around 200k thefts in EU,
-              But...
-              We invented MA
+              Be Careful! <br />
+              Your security is at risk without the proper systems. <br />
+              In 2018 there was around 200k thefts in EU, But... We invented MA
               a multisensor alarm to protect your flat and guarantee your safety
               Multi sensor alarm uses some interesting technologies such as ...
-              Web app
-              You can see on pc what is happening in your flat in real time
+              Web app You can see on pc what is happening in your flat in real
+              time
             </p>
           </div>
           <div class="p-0 col-lg-6">
@@ -105,15 +114,14 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 p-4">
             <img
-              class="img-fluid d-block mb-3 mx-auto "
+              class="img-fluid d-block mb-3 mx-auto"
               src=" {{ url_for('static', filename='./image/acchiardi.jpeg') }}"
               alt="Card image cap"
               width="200px"
-              
-              style="border-radius: 50%;height:200px"
+              style="border-radius: 50%; height: 200px"
             />
             <h4 class="text-light"><b>Acchiardi</b></h4>
-            <p class="mb-0">CEO and founder</p>
+            <p class="mb-0">Co-founder</p>
           </div>
           <div class="col-lg-4 col-md-6 p-4">
             <img
@@ -123,7 +131,7 @@
               src=" {{ url_for('static', filename='./image/bassignana.jpeg') }}"
             />
             <h4 class="text-light"><b>Bassignana</b></h4>
-            <p class="mb-0">Co-founder</p>
+            <p class="mb-0">CEO and founder</p>
           </div>
           <div class="col-lg-4 p-4">
             <img
@@ -132,7 +140,7 @@
               width="200"
             />
             <h4 class="text-light"><b>Agbonson</b></h4>
-            <p class="mb-0">freelancer</p>
+            <p class="mb-0">Front-end developer</p>
           </div>
         </div>
       </div>
@@ -182,16 +190,32 @@
                 <a class="nav-link active" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/team-pcto-MA/PROGETTO_MA">Features</a>
+                <a
+                  class="nav-link"
+                  href="https://github.com/team-pcto-MA/PROGETTO_MA"
+                  >Features</a
+                >
               </li>
-              <li class="nav-item"><a class="nav-link" href="https://github.com/team-pcto-MA/PROGETTO_MA">About</a></li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="https://github.com/team-pcto-MA/PROGETTO_MA"
+                  >About</a
+                >
+              </li>
             </ul>
             <div class="row">
               <div
-                class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"
+                class="
+                  col-md-12
+                  d-flex
+                  align-items-center
+                  justify-content-md-between justify-content-center
+                  my-2
+                "
               >
                 <a href="https://github.com/team-pcto-MA/PROGETTO_MA">
-                  <i class="fa fa-github fa-2x"  ></i>
+                  <i class="fa fa-github fa-2x"></i>
                 </a>
               </div>
             </div>
